<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cxg.empattendance.activity.EmpAttendanceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/workshop"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/workshop"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zlinecode"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zlinecode"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zbc"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zbc"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/profession"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/profession"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2.0"
                        android:inputType="text"
                        android:focusable="false"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>


                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/technology"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/technology"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:focusable="false"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/empId"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/empId"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:focusable="false"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/empName"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/empName"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/dayTime"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dayTime"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/userId"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <!--按钮操作-->
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/signIn"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dip"
                        android:layout_weight="0.30"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/signIn"
                        android:textColor="@color/color1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/printer"
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dip"
                        android:layout_weight="0.30"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/printer"
                        android:textColor="@color/color1"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
